# sportssim

./: .deploy-trigger  .gitignore  Dockerfile  PLAN.md  README.md  TASKS.md  fly.toml  package-lock.json  package.json  server.js  test-calibration.js  test-od-e2e-final.js  test-od-preflight-v68.js  test-opening-day-dryrun.js  train-v3.js
engine/: Cargo.toml
engine/api/: Cargo.toml
engine/api/src/: main.rs
ml/: engine.py  requirements.txt  server.py  train_mlb.py
ml_engine/: README.md  data_fetcher.py  nba_model.py  requirements.txt
models/: backtest-mlb-v2.js  backtest-mlb.js  backtest-nhl.js  backtest.js  mlb-2023-stats.js  mlb-opening-day.js  mlb-pitchers.js  mlb.js  nba.js  ncaa.js  nfl.js  nhl.js
monitoring/: HEALTHCHECKS.md  alerts.yml  blackbox.yml  prometheus.yml
public/: index.html  live-execution.html  opener.html
scripts/: fetch-nhl-games.js  grade-rest-tank.js  mlb-accuracy-audit.js  od-gameday-warmup.sh  verify-production.sh
services/: alt-lines.js  arbitrage.js  auto-grade-pipeline.js  auto-scanner.js  batter-props.js  bet-tracker-data.json  bet-tracker.js  bullpen-quality.js  calibration.js  catcher-framing.js  clv-tracker.js  consensus-engine.js  daily-mlb-card.js  daily-nba-card.js  daily-nhl-card.js  daily-picks.js  daily-slate.js  data-cache.json  f3-model.js  f7-model.js  futures-scanner.js  gameday-autopilot.js  gameday-d0-system.js  gameday-lineup-pipeline.js  gameday-lineup-state.json  gameday-orchestrator-state.json  gameday-orchestrator.js  historical-games.js  injuries.js  injury-cache.json  kalshi-cache.json  kalshi.js  kelly.js  (+99 more)
(+43 files in other folders)
