[package]
name = "engine-api"
version.workspace = true
edition.workspace = true

[dependencies]
engine-core = { path = "../core" }
engine-sports = { path = "../sports" }
engine-equities = { path = "../equities" }
engine-crypto = { path = "../crypto" }
engine-backtest = { path = "../backtest" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
